# quartz

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  THIRD_PARTY_LICENSES.html  index.html  package-lock.json  package.json  vite.config.ts
docs/: RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md  ROADMAP.md
scripts/: build-release.ps1  make-latest-json.ps1  make-licenses.ps1
src/: App.css  App.tsx  EqPanel.tsx  data.ts  eqTypes.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  about.hbs  about.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icon.html  icon.icns
src-tauri/src/: lib.rs  m3u.rs  smtc.rs  watcher.rs
src-tauri/src/audio/: device.rs  mod.rs  player.rs
